# pyocmf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLI.md  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  specification.md
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: auto-merge.yml  deploy-docs.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
docs/: api.md  cli.md  demo.md  index.md
docs/demo/: index.html
docs/demo-app/: index.html
docs/demo-app/js/: main.js  ui-controller.js
docs/demo/css/: styles.css
docs/demo/js/: ocmf-bridge.js  pyodide-loader.js  ui-controller.js
examples/: cli_usage.sh
scripts/: update_test_files.py
src/ocmf/: ocmf.py  payload.py  signature.py
src/ocmf/custom_types/: hex_string.py
src/ocmf/sections/: metrologic_parameters.py  payload.py  readings.py  signature.py  user_assignment.py
src/pyocmf/: __init__.py  cli.py  constants.py  exceptions.py  ocmf.py  transparency.py  verification.py  xml_parser.py
src/pyocmf/cli/: app.py  commands.py  display.py
src/pyocmf/compliance/: __init__.py  models.py  reading.py  reading_validator.py  regulatory.py  transaction.py  transaction_validator.py
src/pyocmf/core/: ocmf.py  payload.py  reading.py  signature.py
src/pyocmf/crypto/: __init__.py  availability.py  verification.py
src/pyocmf/custom_types/: cable_loss.py  hex_string.py  strings.py  units.py
src/pyocmf/enums/: __init__.py
src/pyocmf/models/: __init__.py  cable_loss.py  obis.py  public_key.py  timestamp.py
src/pyocmf/registries/: obis.py
src/pyocmf/sections/: __init__.py  charge_point_assignment.py  metrologic_parameters.py  payload.py  reading.py  readings.py  signature.py  user_assignment.py
src/pyocmf/types/: __init__.py  cable_loss.py  crypto.py  encoding.py  identifiers.py  numbers.py  obis.py  pagination.py  public_key.py  units.py
src/pyocmf/utils/: __init__.py  serialization.py  xml.py
test/: conftest.py  helpers.py  test_cli.py
test/integration/: test_examples.py  test_roundtrip.py
test/resources/other_examples/: base64_ocmf.xml  working_ocmf.xml
test/resources/transparency_xml/: README.md
test/resources/transparenzsoftware/: XML_Format.md
test/test_cli/: test_commands.py
test/test_compliance/: test_integration.py  test_pairing.py  test_regulatory.py
test/test_core/: test_ocmf.py  test_payload.py  test_reading.py
test/test_crypto/: test_optional.py  test_verification.py
test/test_enums/: test_crypto.py  test_units.py
test/test_models/: test_cable_loss.py  test_public_key.py
test/test_ocmf/: __init__.py  conftest.py  helpers.py  test_cli.py  test_eichrecht_transparenzsoftware.py  test_id_validation.py  test_obis.py  test_ocmf_string_parsing.py  test_ocmf_verify_methods.py  test_optional_crypto.py  test_other_examples.py  test_parsing.py  test_public_key.py  test_public_key_info.py  test_regulatory.py  test_roundtrip.py  test_signature_verification.py  test_transaction_pairing.py  test_transparency_files.py  test_validators.py
test/test_ocmf/test_custom_types/: test_cable_loss.py  test_hex_string.py  test_strings.py  test_units.py
test/test_ocmf/test_types/: __init__.py  test_cable_loss.py  test_crypto.py  test_encoding.py  test_identifiers.py  test_units.py
