[build-system]
requires = ["uv_build>=0.8.3"]
build-backend = "uv_build"

[project]
name = "pyocmf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ciso8601~=2.3",
    "phonenumbers~=9.0",
    "pydantic-extra-types~=2.10",
    "pydantic~=2.10",
]

[project.scripts]
pyocmf = "pyocmf.cli:main"

[project.optional-dependencies]
cli = [
    "rich>=14.2.0",
    "typer>=0.20.0",
]
crypto = [
    "cryptography~=44.0",
]

[dependency-groups]
dev = [
    "mypy~=1.1",
    "pytest~=9.0",
    "ruff~=0.8",
    "types-cryptography~=3.3",
]
docs = [
    "mkdocs-material~=9.5",
    "mkdocstrings[python]~=0.27",
    "mkdocs-autorefs~=1.2",
]
